<resources>
    <string name="app_name">QSL</string>
    <string name="no_data_found">No data found</string>
    <string name="error_loading_data">Error loading data</string>
    <string name="tap_to_retry">Tap to retry</string>
    <string name="standings">Standings</string>
    <string name="schedule">Schedule</string>
    <string name="top_scorers">Top Scorers</string>
    <string name="top_assists">Top Assists</string>
    <string name="winner">Winner</string>
    <string name="team1">Team</string>
    <string name="gp">GP</string>
    <string name="w">W</string>
    <string name="d">D</string>
    <string name="l">L</string>
    <string name="pts">PTS</string>
    <string name="gs">GS</string>
    <string name="gc">GC</string>
    <string name="gd">GD</string>
    <string name="name">Name</string>
    <string name="goals">Goals</string>
    <string name="assists">Assists</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unexpected_error_try_later">Unexpected error, try later</string>
    <string name="connection_error">Connection error</string>
    <string name="no_standings">Standing table is not available right now :-)</string>
    <string name="no_top_scorers">Top scorers is not available right now :-)</string>
    <string name="no_top_assists">Top assists is not available right now :-)</string>
    <string name="no_matches">No matches are available right now :-)</string>
    <string name="finished">Finished</string>

    <array name="main_tabs">
        <item>@string/standings</item>
        <item>@string/schedule</item>
        <item>@string/top_scorers</item>
        <item>@string/top_assists</item>
        <item>@string/winner</item>
    </array>
</resources>
