<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/StandingsRow"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="@dimen/dp25"
            android:layout_height="@dimen/dp25">

            <ImageView
                android:id="@+id/image_default"
                style="@style/NormalImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/gray_logo_ball" />

            <ImageView
                android:id="@+id/image_logo"
                style="@style/NormalImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </FrameLayout>

        <views.LightTextView
            android:id="@+id/text_title"
            style="@style/StandingContentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp5"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="left"
            android:maxLines="1"
            android:singleLine="true"
            android:text="Team" />
    </LinearLayout>

    <views.LightTextView
        android:id="@+id/text_gp"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gp" />

    <views.LightTextView
        android:id="@+id/text_w"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/w" />

    <views.LightTextView
        android:id="@+id/text_d"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/d" />

    <views.LightTextView
        android:id="@+id/text_l"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/l" />

    <views.LightTextView
        android:id="@+id/text_pts"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/pts" />

    <views.LightTextView
        android:id="@+id/text_gs"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gs" />

    <views.LightTextView
        android:id="@+id/text_gc"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gc" />

    <views.LightTextView
        android:id="@+id/text_gd"
        style="@style/StandingContentText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/gd" />
</LinearLayout>