<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.rey.material.widget.ProgressView
        android:id="@+id/circularProgressView"
        android:layout_width="@dimen/dp48"
        android:layout_height="@dimen/dp48"
        app:pv_autostart="true"
        android:layout_gravity="center"
        android:visibility="gone"
        app:pv_circular="true"
        app:pv_progressMode="indeterminate"
        app:pv_progressStyle="@style/Material.Drawable.CircularProgress" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <include
        android:id="@+id/view_empty"
        layout="@layout/view_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/view_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/layout_recyclerHeader"
            style="@style/ProfessionalsRow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp5"
            android:orientation="horizontal"
            android:visibility="invisible">

            <views.BoldTextView
                style="@style/ProfessionalHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:text="@string/name" />

            <views.BoldTextView
                style="@style/ProfessionalHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/team1" />

            <views.BoldTextView
                style="@style/ProfessionalHeaderText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/dp5"
                android:layout_weight="1"
                android:text="@string/goals" />
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical" />
    </LinearLayout>

    <com.rey.material.widget.ProgressView
        android:id="@+id/linearProgressView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:lpd_strokeColor="#00FF00"
        app:pv_circular="false"
        app:pv_progressMode="indeterminate" />
</FrameLayout>